packages/mosaic/button/button.scss
@import '../core/styles/common/layout';
@import '../design-tokens/tokens';
@import 'button-base';


.mc-button {
    @extend %mc-button-base;

    padding:
        calc(
            var(--mc-button-size-vertical-padding, #{$button-size-vertical-padding}) -
            var(--mc-button-size-border-width, #{$button-size-border-width})
        )
        calc(
            var(--mc-button-size-horizontal-padding, #{$button-size-horizontal-padding}) -
            var(--mc-button-size-border-width, #{$button-size-border-width})
        );
}

.mc-light-button {
    @extend %mc-button-base;
}

.mc-icon-button {
    @extend %mc-button-base;

    padding:
        calc(
            var(--mc-icon-button-size-vertical-padding, #{$icon-button-size-vertical-padding}) -
            var(--mc-button-size-border-width, #{$button-size-border-width})
        )
        calc(
            var(--mc-icon-button-size-horizontal-padding, #{$icon-button-size-horizontal-padding}) -
            var(--mc-button-size-border-width, #{$button-size-border-width})
        );

    &.mc-icon-button_left {
        padding-right: calc(
            var(--mc-icon-button-size-icon-horizontal-padding, #{$icon-button-size-icon-horizontal-padding}) -
            var(--mc-button-size-border-width, #{$button-size-border-width})
        );
    }

    &.mc-icon-button_right {
        padding-left: calc(
            var(--mc-icon-button-size-icon-horizontal-padding, #{$icon-button-size-icon-horizontal-padding}) -
            var(--mc-button-size-border-width, #{$button-size-border-width})
        );
    }

    .mc-button-wrapper {
        display: flex;

        .mc-icon {
            margin: auto;
            line-height: 20px;
        }

        .mc-icon_left {
            margin-right: var(--mc-icon-button-size-icon-padding, $icon-button-size-horizontal-padding);
        }

        .mc-icon_right {
            margin-left: var(--mc-icon-button-size-icon-padding, $icon-button-size-horizontal-padding);
        }
    }
}

.mc-button-overlay {
    position: absolute;

    top: -1px;
    left: -1px;
    right: -1px;
    bottom: -1px;

    border-radius: inherit;
}

